syntax = "proto3";

import "scalapb/scalapb.proto";

package com.evernym.verity.actor.agent;

message SponsorRel {
    option (scalapb.message).companion_extends = "com.evernym.verity.actor.agent.SponsorRelCompanion";
    string sponsorId = 1;
    string sponseeId = 2;
}

